--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@vuelidate/validators": "^2.0.3",
     "axios": "^1.4.0",
     "pinia": "^2.1.4",
-    "sweetalert2": "^11.7.27",
+    "razorpay": "^0.0.0",
+    "request": "^2.88.2",
+    "sweetalert2": "^11.6.13",
     "vee-validate": "^4.11.1",
     "vue": "^3.3.4",
     "vue-draggable-next": "^2.2.1",
@@ -30,13 +32,13 @@
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/test-utils": "^2.4.1",
     "@vuelidate/core": "^2.0.3",
-    "babel-core": "^6.26.3",
+    "babel-core": "^4.7.16",
     "babel-loader": "^9.1.3",
     "babel-preset-es2015": "^6.24.1",
     "gh-pages": "^6.0.0",
     "install": "^0.13.0",
     "jsdom": "^22.1.0",
-    "netlify-cli": "^16.3.6",
+    "netlify-cli": "^17.23.3",
     "typescript": "^5.2.2",
     "vite": "^4.4.6",
     "vitest": "^0.33.0",
